データ型の修正

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -16,7 +16,7 @@
   # 修正の意図: 文字と文字の合成のコードへ変更。
   <p>
     <strong>Comment:</strong>
-    <%= @blog.comments.count.to_i + "comments" %>
+    <%= @blog.comments.count.to_s + "comments" %>
   </p>
 
   <p>
